@@ -11,6 +11,7 @@ TODO: fix/describe logic for changing input format (multiple headers in non-seek
 1.14.4
 ---
 - Fix resync logic to properly work again (used to prematurely end stream on bad headers). A regression again, this sucks, but at least we got a regression test for that now.
+- Fix aeon-old regression (since 1.11.0) about short seeks: Bit reservoir was reset also for short seeks that did not break continuity.
 
 1.14.3
 ---
